# qlibs-cpp

./: .deepsource.toml  CMakeLists.txt  README.md  _arduino_01support.html  algorithm_8hpp_source.html  annotated.html  annotated_dup.js  arduino__fix_8h_source.html  bitfield_8hpp_source.html  classes.html  classfis-members.html  classfis.html  classfis.js  classfis_core.html  classfis_input-members.html  classfis_input.html  classfis_input.js  classfis_m_f-members.html  classfis_m_f.html  classfis_m_f.js  classfis_output-members.html  classfis_output.html  classfis_output.js  classfis_system-members.html  classfis_system.html  classfis_system.js  classqlibs_1_1bitfield-members.html  classqlibs_1_1bitfield.html  classqlibs_1_1bitfield.js  classqlibs_1_1continuous_system-members.html  classqlibs_1_1continuous_system.html  classqlibs_1_1continuous_system.js  classqlibs_1_1crc-members.html  classqlibs_1_1crc.html  classqlibs_1_1crc.js  classqlibs_1_1derivative-members.html  classqlibs_1_1derivative.html  classqlibs_1_1derivative.js  classqlibs_1_1discrete_system-members.html  classqlibs_1_1discrete_system.html  (+319 more)
.github/workflows/: docpublish.yml  doxygen_gen.yml  static-analisys.yml
Debug/BrowseInfo/: sa_check.pbd.browse  sa_check.pbw
check/: Backup of sa_check.ewp  main.cpp  mat.hpp  qlibs_cpp_test.cpp  sa_check.ewp  sa_check.ewt
check/settings/: sa_check.Debug.cspy.bat  sa_check.Debug.cspy.ps1
doc/: Doxyfile  Doxyfile_test  arduinos.dox  mainpage.dox  qbitfield.dox  qcrc.dox  qffmath.dox  qfis.dox  qfp16.dox  qinterp1.dox  qltisys.dox  qpid.dox  qrms.dox  qssmoother.dox  qtdl.dox
examples/continuous_system/: continuous_system.ino
examples/discrete_system/: discrete_system.ino
examples/gaussian_smoother/: gaussian_smoother.ino
examples/mamdani_tipper/: mamdani_tipper.ino
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+93 more)
src/: CMakeLists.txt  bitfield.cpp  crc.cpp  ffmath.cpp  fis.cpp  fisCore.cpp  fp16.cpp  generic.cpp  interp1.cpp  ltisys.cpp  mathex.cpp  numa.cpp  pid.cpp  qlibs.h  rms.cpp  smoother.cpp  tdl.cpp
src/include/: algorithm.hpp  arduino_fix.h  bitfield.hpp  crc.hpp  ffmath.hpp  fis.hpp  fp16.hpp  generic.hpp  interp1.hpp  ltisys.hpp  mat.hpp  mathex.hpp  numa.hpp  pid.hpp  qlibs_types.hpp  rms.hpp  smoother.hpp  tdl.hpp  types.hpp
(+1 files in other folders)
